Ajout de fonctionnalités de parrainage et refactorisation des services